-6.0.4 (2014-03-??)
- Updated language files from Transifex.
- A few more tweaks to the missing-artwork grabber.

-6.0.3 (2014-03-02)
- Fix a potential script crash with a background query not triggering a DB update (if it is needed).
- Make the new date format a setting boolean.
- Help the user find missing artwork for their list-item icons.
- A few more minor improvements to the error-handling logic.

-6.0.2 (2014-02-28)
- Fix timezone crash on systems that can't handle a date prior to the unix epoch in the tz computations.
- Supply an image for a list-item entry in the Guide that would otherwise be a blank selection area.
- Improve the auto-stopping of the background-update proc when the addon updates.
- Localize the day names in AirTime and change " at " to a colon (": ").
- Fix the day-name computation in AirTime for shows that have no episodes in the upcoming week.

v6.0.1 (2014-02-25):
- The first wider release of 6.0.x (after limited-release testing of 6.0.0).

v6.0.0 (2014-02-12):
- This version of Next Aired grabs its data from TheTVDB.com.  This provides quicker updates and more upcoming-episode information.
- The GUI now includes separate episode info for each show that appears multiple times in the upcoming week. If a show is broadcast multiple times on a particular day, it will be listed multiple times on that day.
- The settings have changed to specify how often (in hours) background updates occur (the default is every 8 hours).  There is also a setting for how old the data can be before interacting with the TV Guide will cause an update (also set to 8 hours).
- The data presented to the user and to the skins is mostly the same, with a few minor differences.  For instance, the Classification field is now always empty (no such data available), the Status field has a more limited sete of possible values, and the NextDate and LatestDate fields have a tweaked date format.
- Lots of bug fixes, performance improvements, and improved error handling.
